--- a/worldedit-bukkit/src/main/resources/plugin.yml
+++ b/worldedit-bukkit/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ load: STARTUP
 api-version: 1.20
 softdepend: [ Vault ]
 provides: [ WorldEdit ]
+folia-supported: true
 website: https://modrinth.com/plugin/fastasyncworldedit/
 description: Blazingly fast world manipulation for builders, large networks and developers.
 authors: [ Empire92, MattBDev, IronApollo, dordsor21, NotMyFault ]
