--- a/worldedit-bukkit/src/main/resources/plugin.yml
+++ b/worldedit-bukkit/src/main/resources/plugin.yml
@@ -2,13 +2,11 @@ name: FastAsyncWorldEdit
 main: com.sk89q.worldedit.bukkit.WorldEditPlugin
 version: "${internalVersion}"
 load: STARTUP
-api-version: 1.20
+api-version: 1.21
 softdepend: [ Vault ]
 provides: [ WorldEdit ]
 folia-supported: true
-website: https://modrinth.com/plugin/fastasyncworldedit/
-description: Blazingly fast world manipulation for builders, large networks and developers.
-authors: [ Empire92, MattBDev, IronApollo, dordsor21, NotMyFault ]
+authors: [ Chwitst187 ]
 loadbefore: [ WorldGuard, PlotSquared ]
 database: false
 permissions:
